--- a/src/app/componentes/recepcion/recepcion.component.html
+++ b/src/app/componentes/recepcion/recepcion.component.html
@@ -2,6 +2,28 @@
     RECEPCION DE TRAMITES   
   </p>
 
+
+
+  <mat-form-field>
+    <mat-select placeholder="usuarios">
+      <mat-option *ngFor="let food of foods" [value]="food.value">
+        {{food.viewValue}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+
+
+
+  <mat-form-field class="full-width">
+    <input matInput [matDatepicker]="picker" placeholder="Fecha Tramites">
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+
+  
+  
+
+
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
       <!--- Note that these columns can be defined in any order.
@@ -31,20 +53,26 @@
         <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
       </ng-container>
 
-   <!-- Symbol Column -->
+   <!-- Symbol Column 
    <ng-container matColumnDef="symbol2">
       <th mat-header-cell *matHeaderCellDef>Fojas </th>
       <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
     </ng-container>
       
 
-     <!-- Symbol Column -->
+    
    <ng-container matColumnDef="symbol3">
       <th mat-header-cell *matHeaderCellDef>Observaciones </th>
-      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+      <td mat-cell *matCellDef="let element"> uno
+
+      </td>
     </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  -->
+    
+
+
+     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
     
