--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,11 @@
   </h1>
   </div>
  <!--  <app-login></app-login>
--->
+
   <app-recepcion></app-recepcion>
-<router-outlet></router-outlet>
+-->
+<app-revision> </app-revision>
+  <router-outlet></router-outlet>
 
 
 
