--- a/src/app/componentes/revision/revision.component.html
+++ b/src/app/componentes/revision/revision.component.html
@@ -52,6 +52,26 @@
       <td mat-cell *matCellDef="let element"> {{element.observaciones}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="acciones">
+      <th mat-header-cell *matHeaderCellDef>Acciones</th>
+       <td mat-cell *matCellDef="let element">
+        <button mat-icon-button color="primary" (click)="redirectToDetails(element.id)">
+            <mat-icon class="mat-18">done</mat-icon>
+        </button>
+
+        <button mat-icon-button color="accent" (click)="redirectToDetails(element.id)">
+          <mat-icon class="mat-18">edit</mat-icon>
+      </button>
+
+      <button mat-icon-button color="warn" (click)="redirectToDetails(element.id)">
+        <mat-icon class="mat-18">reorder</mat-icon>
+    </button>
+
+      </td>
+    
+    </ng-container>
+
+
  
  
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
