--- a/src/app/componentes/revision/revision.component.html
+++ b/src/app/componentes/revision/revision.component.html
@@ -55,18 +55,18 @@
     <ng-container matColumnDef="acciones">
       <th mat-header-cell *matHeaderCellDef>Acciones</th>
        <td mat-cell *matCellDef="let element">
-        <button mat-icon-button color="primary" (click)="redirectToDetails(element.id)">
+        <button mat-icon-button color="primary" (click)="openDialog()">
             <mat-icon class="mat-18">done</mat-icon>
         </button>
 
-        <button mat-icon-button color="accent" (click)="redirectToDetails(element.id)">
+        <button mat-icon-button  (click)="redirectToDetails(element.id)">
           <mat-icon class="mat-18">edit</mat-icon>
       </button>
 
       <button mat-icon-button color="warn" (click)="redirectToDetails(element.id)">
         <mat-icon class="mat-18">reorder</mat-icon>
     </button>
-
+    <button mat-raised-button (click)="openDialog()">Pick one</button>
       </td>
     
     </ng-container>
