crear el menu principal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,11 @@
  <!--  <app-login></app-login>
 
   <app-recepcion></app-recepcion>
--->
+
 <app-revision> </app-revision>
-  <router-outlet></router-outlet>
+-->
+<app-observacion></app-observacion>
+<router-outlet></router-outlet>
 
 
 
