--- a/src/app/componentes/observacion/observacion.component.html
+++ b/src/app/componentes/observacion/observacion.component.html
@@ -1,3 +1,12 @@
 <p>
-  observacion works!
+  Observaciones!
 </p>
+<form class="example-form">
+  <mat-form-field class="example-full-width">
+    <input matInput placeholder="Favorite food" value="Sushi">
+  </mat-form-field>
+<p></p>
+  <mat-form-field class="example-full-width">
+    <textarea matInput placeholder="Observaciones"></textarea>
+  </mat-form-field>
+</form>
