configurar el menu principal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,10 @@
   <app-recepcion></app-recepcion>
 
 <app-revision> </app-revision>
--->
+
 <app-observacion></app-observacion>
+-->
+<app-principal></app-principal>
 <router-outlet></router-outlet>
 
 
