--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,3 +39,10 @@ mat-card {
 .full-width-input {
   width: 100%;
 }
+
+div.container{
+  margin:0px 40px;
+}
+.fill-remaining-space {
+  flex: 1 1 auto;
+}
