--- a/src/app/componentes/principal/principal.component.html
+++ b/src/app/componentes/principal/principal.component.html
@@ -1,3 +1,12 @@
 <p>
   principal works!
 </p>
+<div class="container">
+
+  <mat-toolbar>
+    <span class ="fill-remaining-space"></span>
+    <span> angular</span>
+    <span class ="fill-remaining-space"></span>
+  
+  </mat-toolbar>
+</div>
